force-app/main/default/objects/Case/fields/AI_Category__c.field-meta.xml
<CustomField>
    <fullName>AI_Category__c</fullName>
    <description
    >Category recommended by the deterministic triage action. Written by Flow, never by the action itself.</description>
    <label>Triage Category</label>
    <length>40</length>
    <type>Text</type>
</CustomField>