force-app/main/default/objects/Case/fields/AI_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence__c</fullName>
    <description>Share of keyword evidence supporting the chosen category (0 to 1).</description>
    <label>Triage Confidence</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>