force-app/main/default/objects/Case/fields/AI_Urgency__c.field-meta.xml
<CustomField>
    <fullName>AI_Urgency__c</fullName>
    <description>Urgency recommended by the triage action.</description>
    <label>Triage Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>