force-app/main/default/objects/Case/fields/Needs_Human_Review__c.field-meta.xml
<CustomField>
    <fullName>Needs_Human_Review__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set when the triage recommendation must be confirmed by a person.</description>
    <label>Needs Human Review</label>
    <type>Checkbox</type>
</CustomField>