force-app/main/default/objects/Case/fields/Triage_Rationale__c.field-meta.xml
<CustomField>
    <fullName>Triage_Rationale__c</fullName>
    <description
    >Plain-language explanation of the recommendation (matched keywords only, no customer data).</description>
    <label>Triage Rationale</label>
    <length>255</length>
    <type>Text</type>
</CustomField>